# augur

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  crates.js  help.html  ida-plugin-stub.py  ida-plugin.json  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: build.yml  doc.yml
augur/: all.html  fn.run.html  index.html  sidebar-items.js  static.COUNTER.html  static.STRING_MAX_LENGTH.html  struct.IDAString.html
autocxx_parser/: enum.UnsafePolicy.html  index.html  struct.ExternCppType.html  struct.IncludeCpp.html  struct.IncludeCppConfig.html  struct.MultiBindings.html  struct.RustFun.html  struct.RustPath.html  struct.SubclassAttrs.html
autocxx_parser/config/: enum.UnsafePolicy.html  struct.ExternCppType.html  struct.IncludeCppConfig.html  struct.RustFun.html
autocxx_parser/directives/: fn.allowlist_err_to_syn_err.html  struct.BoolFlag.html  struct.Concrete.html  struct.ExternCppType.html  struct.ExternRustFun.html  struct.Generate.html  (+9 more)
bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
cxx/: all.html  attr.bridge.html  index.html  macro.chars.html  macro.let_cxx_string.html  macro.type_id.html  struct.CxxString.html  struct.CxxVector.html  struct.Exception.html  struct.SharedPtr.html  struct.UniquePtr.html  struct.WeakPtr.html  struct.void.html  trait.ExternType.html  type.String.html  type.Vector.html
cxxbridge_macro/: all.html  attr.bridge.html  index.html
haruspex/: all.html  enum.HaruspexError.html  fn.decompile_to_file.html  fn.run.html  index.html  static.COUNTER.html
ryu/: all.html  index.html  struct.Buffer.html  trait.Float.html
search.index/: 000022b704cf.js  0000ce8de300.js  00048b5e4e4f.js  0007836965cf.js  0008ade387b1.js  000a3dfac3ac.js  000c8ce13a67.js  000d163ea64a.js  001048d614c8.js  0015439fdbb6.js  0015ccb44fe9.js  0016be7d626e.js  001948f04193.js  0023115475fe.js  0023ca9998fe.js  0023fe1aa187.js  002406f26001.js  0026301a75a6.js  0026782ee133.js  002f7bf42851.js  0030a25f34d6.js  003131b6edd7.js  0033ce487f65.js  0039c892dab2.js  003a2a6ec7dd.js  003c1ac31992.js  003efaa6a963.js  00427f5cdc82.js  00436e28c76f.js  004396ae305e.js  004675b66f5d.js  004c7012ba7c.js  004d27a572a8.js  004fe3cca584.js  005150ee0a6a.js  0054b7f2bdbd.js  0055304577e3.js  0055bd137fb0.js  0055f9aef5c1.js  0056a77c3150.js  (+17565 more)
serde_json/: all.html  enum.Value.html  fn.from_reader.html  fn.to_writer.html  fn.to_writer_pretty.html  index.html  macro.tri.html  struct.Deserializer.html  struct.Error.html  struct.Map.html  struct.Number.html  struct.Serializer.html  struct.StreamDeserializer.html
src/: lib.rs  main.rs
tests/: main.rs
(+5916 files in other folders)
