[package]
name = "augur"
version = "0.6.2"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Reverse engineering assistant that extracts strings and related pseudo-code from a binary file."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/augur"
documentation = "https://0xdeadbeef.info/augur/augur/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["security", "command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*", "ida-plugin.json"]

[dependencies]
idalib = "0.6"
haruspex = "0.6"
anyhow = "1.0"

[build-dependencies]
idalib-build = "0.6"

[dev-dependencies]
walkdir = "2.5"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"

[lints.rust]
missing_docs = { level = "warn" }

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false
